# pe-nexus

./: .env.example  .gitignore  .zenodo.json  AI_ETHICS_REPORT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAIR_COMPLIANCE_REPORT.md  PE-Nexus_Submission.md  README.md  SECURITY.md  TEACHER_GUIDE.md  codemeta.json  pyproject.toml  requirements.txt  test_scout_import.py
.claude/: settings.local.json
.claude/agents/: continuous-tester.md  fair-principles-auditor.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: DATA_DICTIONARY.md  VOCABULARY_MAPPING.md
frontend/: app.py  app_backup.py
frontend/components/: __init__.py  agent_views.py  cards.py  charts.py  company_views.py  theme.py
frontend/pages/: 0_Deal_Deep_Dive.py  _1_Deal_Sourcing.py  _2_Relationships.py  _3_Legal_Review.py  _4_Financial_Model.py  _5_IC_Debate.py  _6_Portfolio.py  _7_FAIR_Compliance.py
frontend/utils/: __init__.py  api_client.py  formatters.py  mock_data.py
scripts/: demo.py  seed_data.py  seed_network.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py
src/agents/forensic/: __init__.py  agent.py  pdf_extractor.py  reconciler.py
src/agents/guardian/: __init__.py  agent.py  mock_data.py
src/agents/ic/: __init__.py  agent.py  bear_agent.py  bull_agent.py
src/agents/monitor/: __init__.py  agent.py  kpi_tracker.py  lp_reporter.py  mock_data.py
src/agents/navigator/: __init__.py  agent.py  mock_data.py  path_finder.py
src/agents/scout/: __init__.py  agent.py  mock_data.py  scorer.py  sources.py
src/agents/strategist/: __init__.py  agent.py  models.py
src/api/: __init__.py  deps.py
src/api/routes/: __init__.py  agents.py  deals.py  documents.py  fair.py  synthesis.py
src/core/: __init__.py  config.py  events.py  state_machine.py  traceability.py
src/db/: __init__.py  database.py  models.py  vector.py
src/schemas/: __init__.py  deal.py  events.py  financials.py
src/services/: __init__.py  peer_review.py
tests/: conftest.py
tests/test_api/: test_agents.py  test_core_endpoints.py  test_deals.py  test_documents.py
tests/test_core/: test_events.py  test_state_machine.py
venv_linux/: pyvenv.cfg
