[project]
name = "pe-nexus"
version = "0.1.0"
description = "Full-Lifecycle Private Equity Deal Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jordi"}
]
keywords = [
    "private-equity",
    "deal-management",
    "multi-agent-system",
    "financial-extraction",
    "document-processing",
    "ai-agents",
    "fastapi",
    "langgraph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    # LLM & Agent Framework
    "anthropic>=0.39.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",
    "langgraph>=0.2.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Vector Store
    "chromadb>=0.5.0",

    # PDF Processing
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",

    # Data Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Async HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=2.0.0",

    # Utilities
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",

    # CLI Output
    "rich>=13.9.0",

    # Streamlit Frontend
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/jordi/pe-nexus"
Documentation = "https://github.com/jordi/pe-nexus#readme"
Repository = "https://github.com/jordi/pe-nexus.git"
Issues = "https://github.com/jordi/pe-nexus/issues"
Changelog = "https://github.com/jordi/pe-nexus/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
